Update with val

--- a/models/SVM.ipynb
+++ b/models/SVM.ipynb
@@ -37830,25 +37830,25 @@
        "/***/ })\n",
        "/******/ ]);\n",
        "//# sourceMappingURL=bundle.js.map </script></head><body>\n",
-       "        <div class=\"lime top_div\" id=\"top_divJUOMDUE7NSV7LMH\"></div>\n",
+       "        <div class=\"lime top_div\" id=\"top_divXE3FVMKAAJIKDYO\"></div>\n",
        "        \n",
        "        <script>\n",
-       "        var top_div = d3.select('#top_divJUOMDUE7NSV7LMH').classed('lime top_div', true);\n",
+       "        var top_div = d3.select('#top_divXE3FVMKAAJIKDYO').classed('lime top_div', true);\n",
        "        \n",
        "            var pp_div = top_div.append('div')\n",
        "                                .classed('lime predict_proba', true);\n",
        "            var pp_svg = pp_div.append('svg').style('width', '100%');\n",
-       "            var pp = new lime.PredictProba(pp_svg, [\"1\", \"0\"], [0.4473933509293393, 0.5526066490706606]);\n",
+       "            var pp = new lime.PredictProba(pp_svg, [\"1\", \"0\"], [0.4481315678193233, 0.5518684321806768]);\n",
        "            \n",
        "        \n",
        "        var exp_div;\n",
        "            var exp = new lime.Explanation([\"1\", \"0\"]);\n",
        "        \n",
        "                exp_div = top_div.append('div').classed('lime explanation', true);\n",
-       "                exp.show([[\"FTA.1_AVG > 0.12\", 0.10136350388969649], [\"ORtg_players_AVG > 0.19\", 0.07410937699122114], [\"FT.1_AVG > 0.11\", -0.06522829182654034], [\"PTS_AVG > 0.24\", -0.049482839938726465], [\"-0.01 < DRtg_players_AVG <= 0.22\", -0.03221446240993362]], 1, exp_div);\n",
+       "                exp.show([[\"FTA.1_AVG > 0.12\", 0.10739479207870954], [\"ORtg_players_AVG > 0.19\", 0.07977622688030077], [\"PTS_AVG > 0.24\", -0.055804540884092764], [\"FT.1_AVG > 0.11\", -0.05482696040633543], [\"-0.01 < DRtg_players_AVG <= 0.22\", -0.0321440531319974]], 1, exp_div);\n",
        "                \n",
        "        var raw_div = top_div.append('div');\n",
-       "            exp.show_raw_tabular([[\"FTA.1_AVG\", \"0.30\", 0.10136350388969649], [\"ORtg_players_AVG\", \"0.32\", 0.07410937699122114], [\"FT.1_AVG\", \"0.28\", -0.06522829182654034], [\"PTS_AVG\", \"0.32\", -0.049482839938726465], [\"DRtg_players_AVG\", \"0.09\", -0.03221446240993362]], 1, raw_div);\n",
+       "            exp.show_raw_tabular([[\"FTA.1_AVG\", \"0.30\", 0.10739479207870954], [\"ORtg_players_AVG\", \"0.32\", 0.07977622688030077], [\"PTS_AVG\", \"0.32\", -0.055804540884092764], [\"FT.1_AVG\", \"0.28\", -0.05482696040633543], [\"DRtg_players_AVG\", \"0.09\", -0.0321440531319974]], 1, raw_div);\n",
        "        \n",
        "        </script>\n",
        "        </body></html>"
@@ -74963,25 +74963,25 @@
        "/***/ })\n",
        "/******/ ]);\n",
        "//# sourceMappingURL=bundle.js.map </script></head><body>\n",
-       "        <div class=\"lime top_div\" id=\"top_divQZ54JVDH2GBNXCE\"></div>\n",
+       "        <div class=\"lime top_div\" id=\"top_div3BP042U0E72DDJN\"></div>\n",
        "        \n",
        "        <script>\n",
-       "        var top_div = d3.select('#top_divQZ54JVDH2GBNXCE').classed('lime top_div', true);\n",
+       "        var top_div = d3.select('#top_div3BP042U0E72DDJN').classed('lime top_div', true);\n",
        "        \n",
        "            var pp_div = top_div.append('div')\n",
        "                                .classed('lime predict_proba', true);\n",
        "            var pp_svg = pp_div.append('svg').style('width', '100%');\n",
-       "            var pp = new lime.PredictProba(pp_svg, [\"1\", \"0\"], [0.4607477326638084, 0.5392522673361916]);\n",
+       "            var pp = new lime.PredictProba(pp_svg, [\"1\", \"0\"], [0.46208123619336977, 0.5379187638066302]);\n",
        "            \n",
        "        \n",
        "        var exp_div;\n",
        "            var exp = new lime.Explanation([\"1\", \"0\"]);\n",
        "        \n",
        "                exp_div = top_div.append('div').classed('lime explanation', true);\n",
-       "                exp.show([[\"FTA.1_AVG <= -0.12\", -0.09885688187886561], [\"FT.1_AVG <= -0.09\", 0.06038221870699314], [\"2P_AVG > 0.12\", 0.05510920719487689], [\"PTS.1_AVG <= -0.25\", 0.04696921907745121], [\"BPM_players_AVG <= -0.03\", 0.044571361084571715]], 1, exp_div);\n",
+       "                exp.show([[\"FTA.1_AVG <= -0.12\", -0.09336474330099001], [\"FT.1_AVG <= -0.09\", 0.06472805283122517], [\"2P_AVG > 0.12\", 0.05349119664119943], [\"PTS.1_AVG <= -0.25\", 0.045425297125809685], [\"BPM_players_AVG <= -0.03\", 0.04339372640310006]], 1, exp_div);\n",
        "                \n",
        "        var raw_div = top_div.append('div');\n",
-       "            exp.show_raw_tabular([[\"FTA.1_AVG\", \"-0.16\", -0.09885688187886561], [\"FT.1_AVG\", \"-0.17\", 0.06038221870699314], [\"2P_AVG\", \"0.21\", 0.05510920719487689], [\"PTS.1_AVG\", \"-0.26\", 0.04696921907745121], [\"BPM_players_AVG\", \"-0.05\", 0.044571361084571715]], 1, raw_div);\n",
+       "            exp.show_raw_tabular([[\"FTA.1_AVG\", \"-0.16\", -0.09336474330099001], [\"FT.1_AVG\", \"-0.17\", 0.06472805283122517], [\"2P_AVG\", \"0.21\", 0.05349119664119943], [\"PTS.1_AVG\", \"-0.26\", 0.045425297125809685], [\"BPM_players_AVG\", \"-0.05\", 0.04339372640310006]], 1, raw_div);\n",
        "        \n",
        "        </script>\n",
        "        </body></html>"
