--- a/models/NN_LIME.ipynb
+++ b/models/NN_LIME.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = torch.load('./saved/9/nn.pth')"
+    "model = torch.load('./nn.pth')"
    ]
   },
   {
