udpate file path

--- a/models/NN_LIME.ipynb
+++ b/models/NN_LIME.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('./df_train_standarized_45_columns.csv')\n",
-    "test = pd.read_csv('./df_test_standarized_45_columns.csv')\n",
+    "train = pd.read_csv('../data_feature_selection/without winning rate/standardized/df_train_standarized_45_columns.csv')\n",
+    "test = pd.read_csv('../data_feature_selection/without winning rate/standardized/df_test_standarized_45_columns.csv')\n",
     "X_columns = train.columns[1:-1]\n",
     "X_train = train.iloc[::, 1:-1].values\n",
     "X_test = test.iloc[::, 1:-1].values"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -37167,25 +37167,25 @@
        "/***/ })\n",
        "/******/ ]);\n",
        "//# sourceMappingURL=bundle.js.map </script></head><body>\n",
-       "        <div class=\"lime top_div\" id=\"top_divIRK9RIQ6X2BC9UO\"></div>\n",
+       "        <div class=\"lime top_div\" id=\"top_div57N9LLEO03WBZ6Z\"></div>\n",
        "        \n",
        "        <script>\n",
-       "        var top_div = d3.select('#top_divIRK9RIQ6X2BC9UO').classed('lime top_div', true);\n",
+       "        var top_div = d3.select('#top_div57N9LLEO03WBZ6Z').classed('lime top_div', true);\n",
        "        \n",
        "            var pp_div = top_div.append('div')\n",
        "                                .classed('lime predict_proba', true);\n",
        "            var pp_svg = pp_div.append('svg').style('width', '100%');\n",
-       "            var pp = new lime.PredictProba(pp_svg, [\"win\", \"loss\"], [0.5828989744186401, 0.41710102558135986]);\n",
+       "            var pp = new lime.PredictProba(pp_svg, [\"win\", \"loss\"], [0.5404801368713379, 0.4595198631286621]);\n",
        "            \n",
        "        \n",
        "        var exp_div;\n",
        "            var exp = new lime.Explanation([\"win\", \"loss\"]);\n",
        "        \n",
        "                exp_div = top_div.append('div').classed('lime explanation', true);\n",
-       "                exp.show([[\"2P%.1_AVG <= -0.71\", -0.029208243844407112], [\"PTS_AVG <= -0.67\", -0.027570691003321535], [\"ORtg_players_AVG <= -0.68\", 0.021231932864455388], [\"PTS.1_AVG <= -0.66\", -0.019501266879030015], [\"FT%.1_AVG <= -0.72\", 0.015380898393335108], [\"2P%_AVG > 0.71\", 0.01534919831546344], [\"TOV_players_AVG > 0.69\", -0.013038044206136891], [\"3PA_players_AVG > 0.68\", 0.01301710516623252]], 1, exp_div);\n",
+       "                exp.show([[\"PTS_AVG > 0.68\", 0.02940499225052976], [\"FG%_AVG > 0.66\", -0.024109565965054532], [\"FT%_players_AVG > 0.69\", -0.02351581293840281], [\"ORtg_players_AVG > 0.67\", -0.020565556701297272], [\"3P_players_AVG <= -0.65\", -0.01868985271594765], [\"TOV%_players_AVG <= -0.70\", 0.016200957634200604], [\"FT%.1_AVG <= -0.72\", 0.016131981003786378], [\"FTr_players_AVG > 0.62\", 0.01522352090386829], [\"ORB%_players_AVG > 0.65\", -0.013602467911416389], [\"3PAr_players_AVG <= -0.65\", 0.013266405220795098]], 1, exp_div);\n",
        "                \n",
        "        var raw_div = top_div.append('div');\n",
-       "            exp.show_raw_tabular([[\"2P%.1_AVG\", \"-1.25\", -0.029208243844407112], [\"PTS_AVG\", \"-0.96\", -0.027570691003321535], [\"ORtg_players_AVG\", \"-0.92\", 0.021231932864455388], [\"PTS.1_AVG\", \"-0.72\", -0.019501266879030015], [\"FT%.1_AVG\", \"-0.82\", 0.015380898393335108], [\"2P%_AVG\", \"0.72\", 0.01534919831546344], [\"TOV_players_AVG\", \"1.32\", -0.013038044206136891], [\"3PA_players_AVG\", \"0.91\", 0.01301710516623252]], 1, raw_div);\n",
+       "            exp.show_raw_tabular([[\"PTS_AVG\", \"1.39\", 0.02940499225052976], [\"FG%_AVG\", \"0.82\", -0.024109565965054532], [\"FT%_players_AVG\", \"1.45\", -0.02351581293840281], [\"ORtg_players_AVG\", \"0.80\", -0.020565556701297272], [\"3P_players_AVG\", \"-1.40\", -0.01868985271594765], [\"TOV%_players_AVG\", \"-1.13\", 0.016200957634200604], [\"FT%.1_AVG\", \"-0.92\", 0.016131981003786378], [\"FTr_players_AVG\", \"2.00\", 0.01522352090386829], [\"ORB%_players_AVG\", \"1.55\", -0.013602467911416389], [\"3PAr_players_AVG\", \"-1.22\", 0.013266405220795098]], 1, raw_div);\n",
        "        \n",
        "        </script>\n",
        "        </body></html>"
@@ -37208,8 +37208,28 @@
     "    \n",
     "\n",
     "explainer = lime.lime_tabular.LimeTabularExplainer(X_train, feature_names=X_columns, class_names=['win','loss'], mode=\"classification\")\n",
-    "exp = explainer.explain_instance(X_test[1], predict_fn, num_features=8)\n",
+    "exp = explainer.explain_instance(X_test[10], predict_fn, num_features=10)\n",
     "exp.show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.iloc[10, -1]"
    ]
   },
   {
