--- a/models/NN_LIME.ipynb
+++ b/models/NN_LIME.ipynb
@@ -61,8 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('../data_feature_selection/without winning rate/standardized/df_train_standarized_45_columns.csv')\n",
-    "test = pd.read_csv('../data_feature_selection/without winning rate/standardized/df_test_standarized_45_columns.csv')\n",
+    "train = pd.read_csv('../data/df_train_standardized_45_columns.csv')\n",
+    "test = pd.read_csv('../data/df_train_standardized_45_columns.csv')\n",
     "X_columns = train.columns[1:-1]\n",
     "X_train = train.iloc[::, 1:-1].values\n",
     "X_test = test.iloc[::, 1:-1].values"
@@ -37256,7 +37256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
